Update Vercel configuration and add runtime.txt

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
         {
             "src": "web_bot.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python@3.1.0"
         }
     ],
     "routes": [
@@ -11,5 +11,9 @@
             "src": "/(.*)",
             "dest": "web_bot.py"
         }
-    ]
+    ],
+    "env": {
+        "PYTHONPATH": ".",
+        "PYTHONUTF8": "1"
+    }
 }
