--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,19 @@
     "version": 2,
     "builds": [
         {
-            "src": "web_bot.py",
-            "use": "@vercel/python@3.1.0"
+            "src": "api/index.py",
+            "use": "@vercel/python"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "web_bot.py"
+            "dest": "api/index.py"
         }
     ],
-    "env": {
-        "PYTHONPATH": ".",
-        "PYTHONUTF8": "1"
+    "functions": {
+        "api/index.py": {
+            "maxDuration": 10
+        }
     }
 }
