--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-fastapi==0.109.1
-uvicorn==0.27.1
-requests==2.31.0
+flask==3.0.2
 python-telegram-bot==20.8
-httpx==0.26.0
+requests==2.31.0
 python-dotenv==1.0.1
-python-multipart==0.0.9
-boto3==1.34.37
-amazon-paapi5==1.3.0
